--- a/src/views/screens/start.pug
+++ b/src/views/screens/start.pug
@@ -6,8 +6,8 @@
                 img.main(data-src="//hbird1005.dothome.co.kr/images/startPage/startHuman.png" alt="")
             .title
                 div 재미로 보는
-                div 관태기 테스트
-                div 나의 인간 관계 유형은?
+                div 관계 유형 테스트
+                div 나의 인간관계 유형은?
         .mainImage
             img(data-src="//hbird1005.dothome.co.kr/images/startPage/startMain.png" alt="")
         .startBtn
