--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -7,9 +7,9 @@
             .preventHorizonMode{
                 display: none;
             }
-            // .desktopScreen{
-            //     display: none;
-            // }
+            .desktopScreen{
+                display: none;
+            }
         }
     }
 }
@@ -43,8 +43,8 @@ body,html {
         bottom:0;
         left:0;
         margin:auto;
-        width: 100%;
-        height: 100%;
+        width: 100vw;
+        height: 100vh;
         display: flex;
         flex-direction: column;
         justify-content: center;
