--- a/src/assets/scss/screens/mobileTypes/iphone7plus.scss
+++ b/src/assets/scss/screens/mobileTypes/iphone7plus.scss
@@ -147,7 +147,7 @@
                         }
                     }
                     .content__row{
-                        margin: 30px 0;
+                        margin-top: 30px;
                         .mainImage{
                             margin-bottom: 30px;
                             img{
