--- a/src/views/screens/desktop.pug
+++ b/src/views/screens/desktop.pug
@@ -1,4 +1,22 @@
-.desktop
-    .desktop__image
-        //- img(data-src="//hbird1005.dothome.co.kr/images/desktopImage/desktopPhone.png" alt="")
-        //- img(data-src="//hbird1005.dothome.co.kr/images/desktopImage/qr.png" alt="")
+.desktop__container
+    .desktop__content
+        .authorSign
+            span ©댄싱스네일
+        .desktop__columns
+            .pcPhone
+                img(data-src="//hbird1005.dothome.co.kr/images/desktopImage/pcPreview.png" alt="")
+        .desktop__columns
+            .title
+                span 재미로 보는
+                    br
+                    |
+                    strong 관계 유형 테스트
+            .title-bubble
+                img(src="//hbird1005.dothome.co.kr/images/desktopImage/pcBubble.png" data-src="//hbird1005.dothome.co.kr/images/desktopImage/pcBubble.png" alt="")
+            .qrCode
+                img(src="//hbird1005.dothome.co.kr/images/desktopImage/pcQrcode.png" data-src="//hbird1005.dothome.co.kr/images/desktopImage/pcQrcode.png" alt="")
+            .qrCode-info
+                span 모바일에서 #[strong QR]코드를 스캔하여
+                    br
+                    | 테스트를 진행해보세요.
+            
