--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -9,7 +9,7 @@ html(lang="en")
             gtag('js', new Date());
             gtag('config', 'UA-169195735-2');
         meta(charset="UTF-8")
-        meta(name="viewport" content="width=device-width user-scalable=no")
+        meta(name="viewport" content="width=device-width, user-scalable=no")
         meta(name="HandheldFriendly" content="true")
         link(rel="shortcut icon" href="configs/image/favicon32.png")
         //- Sharing SNS SDK 
