--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -25,6 +25,7 @@ body,html {
     -webkit-user-select:none;
     user-select:none;
     -webkit-tap-highlight-color:rgba(0,0,0,0);
+    touch-action: none;
     .swal-modal {
         background-color: white;
         border: none;
