--- a/src/assets/scss/screens/mobileTypes/iphone5.scss
+++ b/src/assets/scss/screens/mobileTypes/iphone5.scss
@@ -1,5 +1,6 @@
 @media (min-height:482px) and (max-height: 570px){
     body{
+        overflow: hidden;
         .resorceLoading{
             font-size: 12px;
         }
