--- a/src/assets/scss/screens/mobileTypes/iphone7.scss
+++ b/src/assets/scss/screens/mobileTypes/iphone7.scss
@@ -1,5 +1,6 @@
 @media (min-height: 641px) and (max-height: 670px){
     body{
+        overflow: hidden;
         .resorceLoading{
             font-size: 14px;
         }
