--- a/src/assets/scss/screens/mobileTypes/iphone7plus.scss
+++ b/src/assets/scss/screens/mobileTypes/iphone7plus.scss
@@ -1,5 +1,6 @@
 @media (min-height: 671px) and (max-height: 740px){
     body{
+        overflow: hidden;
         .resorceLoading{
             font-size: 15px;
         }
