--- a/src/assets/scss/screens/mobileTypes/iphone4.scss
+++ b/src/assets/scss/screens/mobileTypes/iphone4.scss
@@ -1,5 +1,6 @@
 @media (max-height: 480px){
     body{
+        overflow: hidden;
         .resorceLoading{
             font-size: 12px;
         }
