--- a/src/assets/scss/screens/mobileTypes/iphoneXr.scss
+++ b/src/assets/scss/screens/mobileTypes/iphoneXr.scss
@@ -1,5 +1,6 @@
 @media (min-height: 815px) and (max-height: 900px){
     body{
+        overflow: hidden;
         .resorceLoading{
             font-size: 15px;
         }
