--- a/src/assets/scss/screens/mobileTypes/lgG.scss
+++ b/src/assets/scss/screens/mobileTypes/lgG.scss
@@ -1,5 +1,6 @@
 @media (min-height: 571px) and (max-height: 640px){
     body{
+        overflow: hidden;
         .resorceLoading{
             font-size: 14px;
         }
