--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -26,14 +26,8 @@ body,html {
     -webkit-user-select:none;
     user-select:none;
     -webkit-tap-highlight-color:rgba(0,0,0,0);
-    touch-action: manipulation;
+    touch-action: none;
     .swal-modal {
-        position: fixed;
-        top: 0;
-        right: 0;
-        left: 0;
-        bottom: 0;
-        margin: auto;
         background-color: white;
         border: none;
         border-radius: 20px;
