--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -31,8 +31,8 @@ body,html {
         background-color: white;
         border: none;
         border-radius: 20px;
-        // width: 160px;
-        // height: 183px;
+        width: 160px;
+        height: 183px;
     }
     &:hover{
         cursor: default;
