android question button event bug

--- a/src/assets/scss/screens/question.scss
+++ b/src/assets/scss/screens/question.scss
@@ -76,6 +76,7 @@
                 &:not(:last-child){
                     margin-bottom: 10px;
                 }
+                touch-action: initial;
                 width: 100%;
                 background-color: $selectBtn;
                 padding: 12px 0;
