--- a/src/views/screens/result.pug
+++ b/src/views/screens/result.pug
@@ -18,5 +18,5 @@
                 a#sms-link-btn(ontouchstart="")
                     img.snsIcon(data-src="//hbird1005.dothome.co.kr/images/shareIcons/sms-icon.png")
                 //- 배포전 수정 예정(18일 예상)
-                a#clipBoardBtn(data-clipboard-text="https://book.naver.com/bookdb/book_detail.nhn?bid=14564271" ontouchstart="")
+                a#clipBoardBtn(data-clipboard-text="https://m.post.naver.com/viewer/postView.nhn?volumeNo=28488391&memberNo=2931549" ontouchstart="")
                     img.snsIcon(data-src="//hbird1005.dothome.co.kr/images/shareIcons/bookStore-icon.png")
