--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -2,12 +2,12 @@
 html(lang="en")
     head
         //- 서비스 배포시 Unlock
-        script(async src="https://www.googletagmanager.com/gtag/js?id=UA-169195735-2")
-        script.
-            window.dataLayer = window.dataLayer || [];
-            function gtag(){dataLayer.push(arguments);}
-            gtag('js', new Date());
-            gtag('config', 'UA-169195735-2');
+        //- script(async src="https://www.googletagmanager.com/gtag/js?id=UA-169195735-2")
+        //- script.
+        //-     window.dataLayer = window.dataLayer || [];
+        //-     function gtag(){dataLayer.push(arguments);}
+        //-     gtag('js', new Date());
+        //-     gtag('config', 'UA-169195735-2');
         meta(charset="UTF-8")
         meta(name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no")
         meta(name="HandheldFriendly" content="true")
@@ -17,7 +17,7 @@ html(lang="en")
         script(async defer src="https://connect.facebook.net/en_US/sdk.js")
         script(type="text/javascript" async src="https://platform.twitter.com/widgets.js")
         script(src="https://cdn.jsdelivr.net/npm/clipboard@2/dist/clipboard.min.js")
-        script(src="https://unpkg.com/sweetalert/dist/sweetalert.min.js")
+        //- script(src="https://unpkg.com/sweetalert/dist/sweetalert.min.js")
         //- og meta tag
         meta(property="og:type" content="website")
         meta(property="og:url" content="https://jeokdanghi-relationship.com/")
@@ -76,14 +76,14 @@ html(lang="en")
                 }, function(response){});
             }
             
-            const clipboard = new ClipboardJS('#clipBoardBtn');
-            clipboard.on('success', function(e) {
-                swal("책 링크 복사",{
-                    icon: "success",
-                    button: false
-                });
-                setTimeout(()=>{
-                    swal.close();
-                },1300);
-            });
+            //- const clipboard = new ClipboardJS('#clipBoardBtn');
+            //- clipboard.on('success', function(e) {
+            //-     swal("책 링크 복사",{
+            //-         icon: "success",
+            //-         button: false
+            //-     });
+            //-     setTimeout(()=>{
+            //-         swal.close();
+            //-     },1300);
+            //- });
         script(src="main.js")
