--- a/src/assets/scss/screens/question.scss
+++ b/src/assets/scss/screens/question.scss
@@ -72,6 +72,7 @@
         }
         .buttons{
             width: 99%;
+            touch-action: auto;
             .button {
                 &:not(:last-child){
                     margin-bottom: 10px;
