change book-link & Hammer.js test

--- a/src/assets/scss/screens/mobileTypes/PC.scss
+++ b/src/assets/scss/screens/mobileTypes/PC.scss
@@ -17,7 +17,7 @@
         body{
             overflow: hidden;
             .resorceLoading{
-                display: none;
+                display: flex;
             }
             .preventHorizonMode{
                 display: none;
