--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -29,9 +29,9 @@ html(lang="en")
         meta(property="twitter:image" content="https://hbird1005.dothome.co.kr/images/sharedImages/snsShared.png")
         //- preloading local fonts
         link(rel="preload" href="configs/fonts/SCDream5.woff2" as="font" type="font/woff2" crossorigin)
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/startPage/startMain.png" as="image" type="image/png")
         link(rel="preload" href="configs/fonts/SCDream6.woff2" as="font" type="font/woff2" crossorigin)
         link(rel="preload" href="configs/fonts/SCDream7.woff2" as="font" type="font/woff2" crossorigin)
-        link(rel="preload" href="//hbird1005.dothome.co.kr/images/startPage/startMain.png" as="image" type="image/png")
         link(rel="stylesheet", href="styles.css")
         title 재미로 보는 관계 유형 테스트
     body
