All images data-src attribute -> src and all images registed preload

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -29,9 +29,90 @@ html(lang="en")
         meta(property="twitter:image" content="https://hbird1005.dothome.co.kr/images/sharedImages/snsShared.png")
         //- preloading local fonts
         link(rel="preload" href="configs/fonts/SCDream5.woff2" as="font" type="font/woff2" crossorigin)
-        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/startPage/startMain.png" as="image" type="image/png")
         link(rel="preload" href="configs/fonts/SCDream6.woff2" as="font" type="font/woff2" crossorigin)
         link(rel="preload" href="configs/fonts/SCDream7.woff2" as="font" type="font/woff2" crossorigin)
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/startPage/startBubble.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/startPage/startHuman.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/startPage/startMain.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/startPage/startBtn.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/startPage/startBtnText.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/questions/q1&11Bg.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/questions/q1Count.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/questions/q1Image.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/questions/q1Item1.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/questions/q1Item2.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/questions/q2Bg.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/questions/q2Count.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/questions/q2Image.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/questions/q2Item1.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/questions/q3Bg.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/questions/q3Count.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/questions/q3Image.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/questions/q3Item1.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/questions/q4&7Bg.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/questions/q4Count.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/questions/q4Image.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/questions/q4Item1.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/questions/q5&9Bg.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/questions/q5Count.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/questions/q5Image.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/questions/q5Item1.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/questions/q6Bg.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/questions/q6Count.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/questions/q6Image.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/questions/q7Count.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/questions/q7Image.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/questions/q7Item1.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/questions/q7Item2.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/questions/q8Bg.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/questions/q8Count.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/questions/q8Image.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/questions/q8Item1-1.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/questions/q8Item1-2.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/questions/q8Item2-1.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/questions/q8Item2-2.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/questions/q8Item3-1.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/questions/q8Item3-2.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/questions/q8Item1-1.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/questions/q9Count.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/questions/q9Image.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/questions/q9Item1.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/questions/q9Item2.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/questions/q9Item3.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/questions/q9Item1.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/questions/q9Item5.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/questions/q10Bg.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/questions/q10Count.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/questions/q10Image.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/questions/q10Item1.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/questions/q11Count.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/questions/q11Image.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/questions/q11Item1.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/questions/q11Item2.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/questions/q11Item3.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/types/resultBottom.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/shareIcons/kakao-icon.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/shareIcons/facebook-icon.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/shareIcons/twitter-icon.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/shareIcons/sms-icon.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/shareIcons/bookStore-icon.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/resultLoading/loadingCloud1.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/resultLoading/loadingCloud2.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/resultLoading/loadingCloud3.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/resultLoading/underLine.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/resultLoading/book.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/types/type1Battery.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/types/type1Image.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/types/type2Battery.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/types/type2Image.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/types/type3Battery.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/types/type3Image.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/types/type4Battery.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/types/type4Image.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/resultLoading/goToResult.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/desktopImage/pcPreview.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/desktopImage/pcBubble.png" as="image" type="image/png")
+        link(rel="preload" href="https://hbird1005.dothome.co.kr/images/desktopImage/pcQrcode.png" as="image" type="image/png")
         link(rel="stylesheet", href="styles.css")
         title 재미로 보는 관계 유형 테스트
     body
