--- a/src/views/screens/question2.pug
+++ b/src/views/screens/question2.pug
@@ -1,18 +1,18 @@
 .slide.question(oncontextmenu="return false" ondragstart="return false" onselectstart="return false")
     .slide__content
         .topImage
-            img(data-src="//hbird1005.dothome.co.kr/images/questions/q2Bg.png" alt="")
+            img(src="https://hbird1005.dothome.co.kr/images/questions/q2Bg.png" alt="")
         .content__row
             .count
-                img(data-src="//hbird1005.dothome.co.kr/images/questions/q2Count.png" alt="")
+                img(src="https://hbird1005.dothome.co.kr/images/questions/q2Count.png" alt="")
             .main
                 .main__text
                     span 친한 친구와의 식사 자리에서
                         br
                         | 메뉴를 고를 때, 당신의 선택은?
                 .main__image.q2
-                    img(data-src="//hbird1005.dothome.co.kr/images/questions/q2Image.png" alt="")
-                    img(data-src="//hbird1005.dothome.co.kr/images/questions/q2Item1.png" alt="")
+                    img(src="https://hbird1005.dothome.co.kr/images/questions/q2Image.png" alt="")
+                    img(src="https://hbird1005.dothome.co.kr/images/questions/q2Item1.png" alt="")
         .buttons
             .button.selectBtn(data-id="1" ontouchstart="")
                 span ①
