--- a/src/views/screens/question6.pug
+++ b/src/views/screens/question6.pug
@@ -1,10 +1,10 @@
 .slide.question(oncontextmenu="return false" ondragstart="return false" onselectstart="return false")
     .slide__content
         .topImage
-            img(data-src="//hbird1005.dothome.co.kr/images/questions/q6Bg.png" alt="")
+            img(src="https://hbird1005.dothome.co.kr/images/questions/q6Bg.png" alt="")
         .content__row
             .count
-                img(data-src="//hbird1005.dothome.co.kr/images/questions/q6Count.png" alt="")
+                img(src="https://hbird1005.dothome.co.kr/images/questions/q6Count.png" alt="")
             .main
                 .main__text
                     span 친한 친구의 결혼식,
@@ -13,7 +13,7 @@
                         br
                         | 동창을 만났다면 당신은?
                 .main__image.q6
-                    img(data-src="//hbird1005.dothome.co.kr/images/questions/q6Image.png" alt="")
+                    img(src="https://hbird1005.dothome.co.kr/images/questions/q6Image.png" alt="")
         .buttons
             .button.selectBtn(data-id="1" ontouchstart="")
                 span ①
