--- a/src/views/screens/question9.pug
+++ b/src/views/screens/question9.pug
@@ -1,10 +1,10 @@
 .slide.question(oncontextmenu="return false" ondragstart="return false" onselectstart="return false")
     .slide__content
         .topImage
-            img(data-src="//hbird1005.dothome.co.kr/images/questions/q5&9Bg.png" alt="")
+            img(src="https://hbird1005.dothome.co.kr/images/questions/q5&9Bg.png" alt="")
         .content__row
             .count
-                img(data-src="//hbird1005.dothome.co.kr/images/questions/q9Count.png" alt="")
+                img(src="https://hbird1005.dothome.co.kr/images/questions/q9Count.png" alt="")
             .main
                 .main__text
                     span 별로 안 친하다고 생각한
@@ -13,13 +13,13 @@
                         br
                         | 받았다면 당신은?
                 .main__image.q9
-                    img(data-src="//hbird1005.dothome.co.kr/images/questions/q9Image.png" alt="")
+                    img(src="https://hbird1005.dothome.co.kr/images/questions/q9Image.png" alt="")
                     .maskQ9
-                        img(data-src="//hbird1005.dothome.co.kr/images/questions/q9Item1.png" alt="")
-                        img(data-src="//hbird1005.dothome.co.kr/images/questions/q9Item2.png" alt="")
-                        img(data-src="//hbird1005.dothome.co.kr/images/questions/q9Item3.png" alt="")
-                        img(data-src="//hbird1005.dothome.co.kr/images/questions/q9Item1.png" alt="")
-                        img(data-src="//hbird1005.dothome.co.kr/images/questions/q9Item5.png" alt="")
+                        img(src="https://hbird1005.dothome.co.kr/images/questions/q9Item1.png" alt="")
+                        img(src="https://hbird1005.dothome.co.kr/images/questions/q9Item2.png" alt="")
+                        img(src="https://hbird1005.dothome.co.kr/images/questions/q9Item3.png" alt="")
+                        img(src="https://hbird1005.dothome.co.kr/images/questions/q9Item1.png" alt="")
+                        img(src="https://hbird1005.dothome.co.kr/images/questions/q9Item5.png" alt="")
         .buttons
             .button.selectBtn(data-id="1" ontouchstart="")
                 span ①
