--- a/src/views/screens/desktop.pug
+++ b/src/views/screens/desktop.pug
@@ -4,7 +4,7 @@
             span ©댄싱스네일
         .desktop__columns
             .pcPhone
-                img(data-src="//hbird1005.dothome.co.kr/images/desktopImage/pcPreview.png" alt="")
+                img(src="https://hbird1005.dothome.co.kr/images/desktopImage/pcPreview.png" alt="")
         .desktop__columns
             .title
                 span 재미로 보는
@@ -12,9 +12,9 @@
                     |
                     strong 관계 유형 테스트
             .title-bubble
-                img(src="//hbird1005.dothome.co.kr/images/desktopImage/pcBubble.png" data-src="//hbird1005.dothome.co.kr/images/desktopImage/pcBubble.png" alt="")
+                img(src="https://hbird1005.dothome.co.kr/images/desktopImage/pcBubble.png" alt="")
             .qrCode
-                img(src="//hbird1005.dothome.co.kr/images/desktopImage/pcQrcode.png" data-src="//hbird1005.dothome.co.kr/images/desktopImage/pcQrcode.png" alt="")
+                img(src="https://hbird1005.dothome.co.kr/images/desktopImage/pcQrcode.png" alt="")
             .qrCode-info
                 span 모바일에서 #[strong QR]코드를 스캔하여
                     br
