--- a/src/views/screens/loading.pug
+++ b/src/views/screens/loading.pug
@@ -1,26 +1,26 @@
 .slide.loading(oncontextmenu="return false" ondragstart="return false" onselectstart="return false")
     .slide__content
-        img.loadingCloud(data-src="//hbird1005.dothome.co.kr/images/resultLoading/loadingCloud1.png" alt="")
-        img.loadingCloud(data-src="//hbird1005.dothome.co.kr/images/resultLoading/loadingCloud2.png" alt="")
-        img.loadingCloud(data-src="//hbird1005.dothome.co.kr/images/resultLoading/loadingCloud3.png" alt="")
+        img.loadingCloud(src="https://hbird1005.dothome.co.kr/images/resultLoading/loadingCloud1.png" alt="")
+        img.loadingCloud(src="https://hbird1005.dothome.co.kr/images/resultLoading/loadingCloud2.png" alt="")
+        img.loadingCloud(src="https://hbird1005.dothome.co.kr/images/resultLoading/loadingCloud3.png" alt="")
         .content__row
             .questionTitle
                 span 외롭지도, 피곤하지도 않은
                     br
                     strong '친구와의 적당한 거리'
                     | 가 궁금하다면?
-                img(data-src="//hbird1005.dothome.co.kr/images/resultLoading/underLine.png" alt="")
+                img(src="https://hbird1005.dothome.co.kr/images/resultLoading/underLine.png" alt="")
             .mainTitle
                 span 에세이
                     strong 《적당히 가까운 사이》를
                     br
                     | 가까운 서점에서 만나보세요!
         .bookImage
-            img(data-src="//hbird1005.dothome.co.kr/images/resultLoading/book.png" alt="")
+            img(src="https://hbird1005.dothome.co.kr/images/resultLoading/book.png" alt="")
         .loadingComment
             .resultBtn#jsResultBtn
                 .button.selectBtn(data-id="loading" ontouchstart="")
-                    img(data-src="//hbird1005.dothome.co.kr/images/resultLoading/goToResult.png" alt="")
+                    img(src="https://hbird1005.dothome.co.kr/images/resultLoading/goToResult.png" alt="")
             .loadingAnimation#jsLoadingAnimation
                 .dot
                 .dot
