--- a/src/views/screens/question10.pug
+++ b/src/views/screens/question10.pug
@@ -1,18 +1,18 @@
 .slide.question(oncontextmenu="return false" ondragstart="return false" onselectstart="return false")
     .slide__content
         .topImage
-            img(data-src="//hbird1005.dothome.co.kr/images/questions/q10Bg.png" alt="")
+            img(src="https://hbird1005.dothome.co.kr/images/questions/q10Bg.png" alt="")
         .content__row
             .count
-                img(data-src="//hbird1005.dothome.co.kr/images/questions/q10Count.png" alt="")
+                img(src="https://hbird1005.dothome.co.kr/images/questions/q10Count.png" alt="")
             .main
                 .main__text
                     span 친구와 약속이 있던 당일,
                         br
                         | 갑자기 취소 통보를 받았을 때 당신은?
                 .main__image.q10
-                    img(data-src="//hbird1005.dothome.co.kr/images/questions/q10Image.png" alt="")
-                    img(data-src="//hbird1005.dothome.co.kr/images/questions/q10Item1.png" alt="")
+                    img(src="https://hbird1005.dothome.co.kr/images/questions/q10Image.png" alt="")
+                    img(src="https://hbird1005.dothome.co.kr/images/questions/q10Item1.png" alt="")
         .buttons
             .button.selectBtn(data-id="1" ontouchstart="")
                 span ①
