--- a/src/views/screens/question11.pug
+++ b/src/views/screens/question11.pug
@@ -1,21 +1,21 @@
 .slide.question(oncontextmenu="return false" ondragstart="return false" onselectstart="return false")
     .slide__content
         .topImage
-            img(data-src="//hbird1005.dothome.co.kr/images/questions/q1&11Bg.png" alt="")
+            img(src="https://hbird1005.dothome.co.kr/images/questions/q1&11Bg.png" alt="")
         .content__row
             .count
-                img(data-src="//hbird1005.dothome.co.kr/images/questions/q11Count.png" alt="")
+                img(src="https://hbird1005.dothome.co.kr/images/questions/q11Count.png" alt="")
             .main
                 .main__text
                     span 야근 후 퇴근하던 길에 갑자기
                         br
                         | 외로움을 느낀 당신의 행동은?
                 .main__image.q11
-                    img(data-src="//hbird1005.dothome.co.kr/images/questions/q11Image.png" alt="")
+                    img(src="https://hbird1005.dothome.co.kr/images/questions/q11Image.png" alt="")
                     .maskQ11
-                        img(data-src="//hbird1005.dothome.co.kr/images/questions/q11Item1.png" alt="")
-                        img(data-src="//hbird1005.dothome.co.kr/images/questions/q11Item2.png" alt="")
-                        img(data-src="//hbird1005.dothome.co.kr/images/questions/q11Item3.png" alt="")
+                        img(src="https://hbird1005.dothome.co.kr/images/questions/q11Item1.png" alt="")
+                        img(src="https://hbird1005.dothome.co.kr/images/questions/q11Item2.png" alt="")
+                        img(src="https://hbird1005.dothome.co.kr/images/questions/q11Item3.png" alt="")
         .buttons
             .button.selectBtn(data-id="1" ontouchstart="")
                 span ①
