--- a/src/views/screens/result.pug
+++ b/src/views/screens/result.pug
@@ -7,16 +7,16 @@
         include ../partials/type4
         .sharedSNS(oncontextmenu="return false" ondragstart="return false" onselectstart="return false")
             .sharedImage
-                img(data-src="//hbird1005.dothome.co.kr/images/types/resultBottom.png" alt="")
+                img(src="https://hbird1005.dothome.co.kr/images/types/resultBottom.png" alt="")
             .sharedIcons
                 a#kakao-link-btn(href="javascript:sendLink()" ontouchstart="")
-                    img.snsIcon(data-src="//hbird1005.dothome.co.kr/images/shareIcons/kakao-icon.png")
+                    img.snsIcon(src="https://hbird1005.dothome.co.kr/images/shareIcons/kakao-icon.png")
                 a#facebookBtn(ontouchstart="")
-                    img.snsIcon(data-src="//hbird1005.dothome.co.kr/images/shareIcons/facebook-icon.png")
+                    img.snsIcon(src="https://hbird1005.dothome.co.kr/images/shareIcons/facebook-icon.png")
                 a(href="https://twitter.com/intent/tweet?text=instagram.com/100doci/&url=https://jeokdanghi-relationship.com/" ontouchstart="")
-                    img.snsIcon(data-src="//hbird1005.dothome.co.kr/images/shareIcons/twitter-icon.png")
+                    img.snsIcon(src="https://hbird1005.dothome.co.kr/images/shareIcons/twitter-icon.png")
                 a#sms-link-btn(ontouchstart="")
-                    img.snsIcon(data-src="//hbird1005.dothome.co.kr/images/shareIcons/sms-icon.png")
+                    img.snsIcon(src="https://hbird1005.dothome.co.kr/images/shareIcons/sms-icon.png")
                 //- 배포전 수정 예정(18일 예상)
                 a#clipBoardBtn(data-clipboard-text="https://book.naver.com/bookdb/book_detail.nhn?bid=16385789" ontouchstart="")
-                    img.snsIcon(data-src="//hbird1005.dothome.co.kr/images/shareIcons/bookStore-icon.png")
+                    img.snsIcon(src="https://hbird1005.dothome.co.kr/images/shareIcons/bookStore-icon.png")
