--- a/src/views/screens/question5.pug
+++ b/src/views/screens/question5.pug
@@ -1,10 +1,10 @@
 .slide.question(oncontextmenu="return false" ondragstart="return false" onselectstart="return false")
     .slide__content
         .topImage
-            img(src="https://hbird1005.dothome.co.kr/images/questions/q5&9Bg.png" alt="")
+            img(data-src="https://hbird1005.dothome.co.kr/images/questions/q5&9Bg.png" alt="")
         .content__row
             .count
-                img(src="https://hbird1005.dothome.co.kr/images/questions/q5Count.png" alt="")
+                img(data-src="https://hbird1005.dothome.co.kr/images/questions/q5Count.png" alt="")
             .main
                 .main__text
                     span 나와 취향이 맞지않는 친구가
@@ -13,8 +13,8 @@
                         br
                         | 당신의 반응은?
                 .main__image.q5
-                    img(src="https://hbird1005.dothome.co.kr/images/questions/q5Image.png" alt="")
-                    img(src="https://hbird1005.dothome.co.kr/images/questions/q5Item1.png" alt="")
+                    img(data-src="https://hbird1005.dothome.co.kr/images/questions/q5Image.png" alt="")
+                    img(data-src="https://hbird1005.dothome.co.kr/images/questions/q5Item1.png" alt="")
         .buttons
             .button.selectBtn(data-id="1" ontouchstart="")
                 span ①
