--- a/src/views/screens/question1.pug
+++ b/src/views/screens/question1.pug
@@ -1,10 +1,10 @@
 .slide.question(oncontextmenu="return false" ondragstart="return false" onselectstart="return false")
     .slide__content
         .topImage
-            img(src="https://hbird1005.dothome.co.kr/images/questions/q1&11Bg.png" alt="")
+            img(data-src="https://hbird1005.dothome.co.kr/images/questions/q1&11Bg.png" alt="")
         .content__row
             .count
-                img(src="https://hbird1005.dothome.co.kr/images/questions/q1Count.png" alt="")
+                img(data-src="https://hbird1005.dothome.co.kr/images/questions/q1Count.png" alt="")
             .main
                 .main__text
                     span 혼자만의 시간을 보내고 있던 당신,
@@ -13,9 +13,9 @@
                         br
                         | 단톡방에 초대된다면 당신은?
                 .main__image.q1
-                    img(src="https://hbird1005.dothome.co.kr/images/questions/q1Image.png" alt="")
-                    img(src="https://hbird1005.dothome.co.kr/images/questions/q1Item1.png" alt="")
-                    img(src="https://hbird1005.dothome.co.kr/images/questions/q1Item2.png" alt="")
+                    img(data-src="https://hbird1005.dothome.co.kr/images/questions/q1Image.png" alt="")
+                    img(data-src="https://hbird1005.dothome.co.kr/images/questions/q1Item1.png" alt="")
+                    img(data-src="https://hbird1005.dothome.co.kr/images/questions/q1Item2.png" alt="")
         .buttons
             .button.selectBtn(data-id="1" ontouchstart="")
                 span ①
