--- a/src/views/screens/start.pug
+++ b/src/views/screens/start.pug
@@ -2,15 +2,15 @@
     .slide__content
         .content__row
             .topImage
-                img.description(src="https://hbird1005.dothome.co.kr/images/startPage/startBubble.png" alt="")
-                img.main(src="https://hbird1005.dothome.co.kr/images/startPage/startHuman.png" alt="")
+                img.description(data-src="https://hbird1005.dothome.co.kr/images/startPage/startBubble.png" alt="")
+                img.main(data-src="https://hbird1005.dothome.co.kr/images/startPage/startHuman.png" alt="")
             .title
                 div 재미로 보는
                 div 관계 유형 테스트
                 div 나의 인간관계 유형은?
         .mainImage
-            img(src="https://hbird1005.dothome.co.kr/images/startPage/startMain.png" alt="")
+            img(data-src="https://hbird1005.dothome.co.kr/images/startPage/startMain.png" alt="")
         .startBtn
             .button(ontouchstart="")
-                img(src="https://hbird1005.dothome.co.kr/images/startPage/startBtn.png" alt="")
-                img(src="https://hbird1005.dothome.co.kr/images/startPage/startBtnText.png" alt="")
+                img(data-src="https://hbird1005.dothome.co.kr/images/startPage/startBtn.png" alt="")
+                img(data-src="https://hbird1005.dothome.co.kr/images/startPage/startBtnText.png" alt="")
