--- a/src/views/partials/type3.pug
+++ b/src/views/partials/type3.pug
@@ -3,14 +3,14 @@
         .title__type
             span 유형 3
         .title__battery
-            img(data-src="https://hbird1005.dothome.co.kr/images/types/type3Battery.png" alt="")
+            img(src="https://hbird1005.dothome.co.kr/images/types/type3Battery.png" alt="")
             span 
                 strong 관태기 80%
                 | 
                 | 가능한 모두와 잘 지내고 싶어
     .content__row
         .mainImage
-            img(data-src="https://hbird1005.dothome.co.kr/images/types/type3Image.png" alt="")
+            img(src="https://hbird1005.dothome.co.kr/images/types/type3Image.png" alt="")
         .info
             span 모든 관계 내가 다 지키겠어!
                 br
