--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -58,11 +58,34 @@ html(lang="en")
         script(type="text/javascript").
             Kakao.init('f9d8205eef6f7b4200be77c0b94dfc8a')
             function sendLink() {
-                Kakao.Link.sendCustom({
-                    templateId: 30195,
-                    templateArgs:{
-                        imageUrl: "https://hbird1005.dothome.co.kr/images/sharedImages/snsShared.png"
-                    }
+                Kakao.Link.sendDefault({
+                    objectType: 'feed',
+                    content: {
+                        title: '딸기 치즈 케익',
+                        description: '#케익 #딸기 #삼평동 #카페 #분위기 #소개팅',
+                        imageUrl:
+                        'http://k.kakaocdn.net/dn/Q2iNx/btqgeRgV54P/VLdBs9cvyn8BJXB3o7N8UK/kakaolink40_original.png',
+                        link: {
+                        mobileWebUrl: 'https://developers.kakao.com',
+                        webUrl: 'https://developers.kakao.com',
+                        },
+                    },
+                    buttons: [
+                        {
+                            title: '웹으로 보기',
+                            link: {
+                                mobileWebUrl: 'https://developers.kakao.com',
+                                webUrl: 'https://developers.kakao.com',
+                            },
+                        },
+                        {
+                            title: '앱으로 보기',
+                            link: {
+                                mobileWebUrl: 'https://developers.kakao.com',
+                                webUrl: 'https://developers.kakao.com',
+                            },
+                        },
+                    ],
                 })
             }
             document.getElementById("facebookBtn").onclick = function() {
