--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -66,23 +66,23 @@ html(lang="en")
                         imageUrl:
                         'http://k.kakaocdn.net/dn/Q2iNx/btqgeRgV54P/VLdBs9cvyn8BJXB3o7N8UK/kakaolink40_original.png',
                         link: {
-                        mobileWebUrl: 'https://developers.kakao.com',
-                        webUrl: 'https://developers.kakao.com',
+                        mobileWebUrl: 'https://jeokdanghi-relationship.com',
+                        webUrl: 'https://jeokdanghi-relationship.com',
                         },
                     },
                     buttons: [
                         {
                             title: '웹으로 보기',
                             link: {
-                                mobileWebUrl: 'https://developers.kakao.com',
-                                webUrl: 'https://developers.kakao.com',
+                                mobileWebUrl: 'https://jeokdanghi-relationship.com',
+                                webUrl: 'https://jeokdanghi-relationship.com',
                             },
                         },
                         {
                             title: '앱으로 보기',
                             link: {
-                                mobileWebUrl: 'https://developers.kakao.com',
-                                webUrl: 'https://developers.kakao.com',
+                                mobileWebUrl: 'https://jeokdanghi-relationship.com',
+                                webUrl: 'https://jeokdanghi-relationship.com',
                             },
                         },
                     ],
