--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -13,7 +13,7 @@ html(lang="en")
         meta(name="HandheldFriendly" content="true")
         link(rel="shortcut icon" href="configs/image/favicon32.png")
         //- Sharing SNS SDK 
-        script(src="https://developers.kakao.com/sdk/js/kakao.min.js")
+        script(src="https://developers.kakao.com/sdk/js/kakao.js")
         script(async defer src="https://connect.facebook.net/en_US/sdk.js")
         script(type="text/javascript" async src="https://platform.twitter.com/widgets.js")
         script(src="https://cdn.jsdelivr.net/npm/clipboard@2/dist/clipboard.min.js")
